[gd_scene load_steps=10 format=2]

[ext_resource path="res://Fonts/Cabin/Modified/Cabin-Hand.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/Game/3D/Hand.gd" type="Script" id=2]
[ext_resource path="res://Sounds/Cards/CardHandSounds.tres" type="Resource" id=3]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.5, 0.5, 0.5 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 1, 0.25, 1 )

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
albedo_color = Color( 1, 1, 1, 0.196078 )

[sub_resource type="PlaneMesh" id=4]

[sub_resource type="ViewportTexture" id=5]
viewport_path = NodePath("NamePlate/Viewport")

[sub_resource type="SpatialMaterial" id=6]
resource_local_to_scene = true
flags_transparent = true
albedo_texture = SubResource( 5 )

[node name="Hand" type="Spatial"]
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": "The hand is an area of the environment where cards are held by a given player.

Only the player owning the hand should be able to see what cards are in the hand."
}
hand_sounds = ExtResource( 3 )

[node name="Area" type="Area" parent="."]
collision_layer = 5

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 36, 0, 0, 0, 20, 0, 0, 0, 18, 0, 0, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Area/CollisionShape"]
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="NamePlate" type="MeshInstance" parent="."]
transform = Transform( 18, 0, 0, 0, 1, 0, 0, 0, 2, 0, 0, 14 )
mesh = SubResource( 4 )
material/0 = SubResource( 6 )

[node name="Viewport" type="Viewport" parent="NamePlate"]
size = Vector2( 1800, 200 )
transparent_bg = true
hdr = false
disable_3d = true
usage = 0
render_target_v_flip = true
gui_disable_input = true

[node name="MarginContainer" type="MarginContainer" parent="NamePlate/Viewport"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 40.0
margin_bottom = 40.0

[node name="NameLabel" type="RichTextLabel" parent="NamePlate/Viewport/MarginContainer"]
margin_right = 1840.0
margin_bottom = 240.0
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
scroll_active = false

[node name="EffectPlayer" type="AudioStreamPlayer3D" parent="."]
unit_size = 30.0
bus = "Effects"

[connection signal="tree_exiting" from="." to="." method="_on_Hand_tree_exiting"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
